remove scrollbar, fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,15 @@
   @media (min-width: 1024px) {
   }
 }
+
+@layer utilities {
+  /* Chrome, Safari, and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* IE, Edge, and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
